Begin fixing invoice page on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -153,7 +153,7 @@ td {
 td,
 th {
   &:first-child {
-    padding-left: 0.75rem;
+    padding-left: 1rem;
   }
 }
 
